--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@expo/webpack-config": "^0.12.71",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-picker/picker": "2.1.0",
+    "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "~6.0.1",
     "@react-navigation/native-stack": "^6.0.2",
     "@react-navigation/stack": "~6.0.1",
