--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.0",
     "@expo/webpack-config": "^0.12.71",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-picker/picker": "2.1.0",
