--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "apisauce": "2.0.0",
     "axios": "^0.27.2",
     "expo": "43.0.0",
+    "expo-image-picker": "~11.0.3",
     "expo-linear-gradient": "~10.0.3",
     "expo-localization": "~11.0.0",
     "expo-modules-core": "~0.4.10",
